--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="zh-hant-TW">
 <head>
 	<meta charset="UTF-8">
-	<title>New Websitr</title>
+	<title>New Website</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<p>Go!Go!Let's Go!</p>
+	<a href="map/index.html">click me!</a>	
 </body>
 </html>
